(fix): Use correct background color with mode  + Default to dark mode  + reduced export size to 1500px

--- a/src/app/pages/ticket/ticket.component.css
+++ b/src/app/pages/ticket/ticket.component.css
@@ -1,7 +1,7 @@
 mat-list.screen {
     display: flex;
     flex-direction: row;
-    width: 2000px;
+    width: 1500px;
     flex-wrap: wrap;
 }
 
